# KataTournamentRunner

./: .travis.yml  CMakeLists.txt  CPackConfig.cmake  Makefile  README.md  build.bat  build.sh  collect-coverage.sh  configure.bat  coverage.ignore  create_VS2013_solution.bat  index.html  kata_tournament_runner_config.h.in  params.json  sonar-project.properties  update-gh-pages.sh
cmake/modules/: CodeCoverage.cmake  FindCppSpec.cmake
doc/: Karate_Tournament_Manager_Features.html  Karate_Tournament_Manager_GUI_Features.html  Kata_Tournament_Runner_Features.html  Kata_Tournament_Runner_GUI_Features.html
doc/html/: about__dialog_8h_source.html  add__participant__dialog_8h_source.html  annotated.html  classTournamentRunnerGUI_1_1AboutDialog-members.html  classTournamentRunnerGUI_1_1AboutDialog.html  classTournamentRunnerGUI_1_1AboutDialog__coll__graph.map  classTournamentRunnerGUI_1_1AboutDialog__inherit__graph.md5  classTournamentRunnerGUI_1_1AddParticipantDialog-members.html  classTournamentRunnerGUI_1_1AddParticipantDialog.html  classTournamentRunnerGUI_1_1AddParticipantDialog__coll__graph.map  classTournamentRunnerGUI_1_1AddParticipantDialog__inherit__graph.md5  classTournamentRunnerGUI_1_1EditTournamentDialog-members.html  classTournamentRunnerGUI_1_1EditTournamentDialog.html  classTournamentRunnerGUI_1_1EditTournamentDialog__coll__graph.md5  classTournamentRunnerGUI_1_1EditTournamentDialog__inherit__graph.map  classTournamentRunnerGUI_1_1FinalFrame-members.html  classTournamentRunnerGUI_1_1FinalFrame.html  classTournamentRunnerGUI_1_1FinalFrame__inherit__graph.map  classTournamentRunnerGUI_1_1FinalFrame__inherit__graph.md5  classTournamentRunnerGUI_1_1KataRoundOverviewFrame-members.html  classTournamentRunnerGUI_1_1KataRoundOverviewFrame.html  classTournamentRunnerGUI_1_1KataRoundOverviewFrame__inherit__graph.map  classTournamentRunnerGUI_1_1KataRoundOverviewFrame__inherit__graph.md5  classTournamentRunnerGUI_1_1KataRoundParticipantModel-members.html  classTournamentRunnerGUI_1_1KataRoundParticipantModel.html  classTournamentRunnerGUI_1_1KataRoundParticipantModel__coll__graph.md5  classTournamentRunnerGUI_1_1KataRoundParticipantModel__inherit__graph.map  classTournamentRunnerGUI_1_1KataRoundParticipantModel_aef6b37f88593a290466da647d1ee7798_cgraph.map  classTournamentRunnerGUI_1_1KataRoundParticipantModel_aef6b37f88593a290466da647d1ee7798_cgraph.md5  classTournamentRunnerGUI_1_1MainFrame-members.html  classTournamentRunnerGUI_1_1MainFrame.html  classTournamentRunnerGUI_1_1MainFrame__coll__graph.md5  classTournamentRunnerGUI_1_1MainFrame__inherit__graph.map  classTournamentRunnerGUI_1_1MainFrame_abe8dbd2470efefa81ede56b2f61364a3_cgraph.map  classTournamentRunnerGUI_1_1MainFrame_abe8dbd2470efefa81ede56b2f61364a3_cgraph.md5  classTournamentRunnerGUI_1_1MainFrame_adeed5ba9470200e2c9e9ba5cce214396_cgraph.map  classTournamentRunnerGUI_1_1MainFrame_adeed5ba9470200e2c9e9ba5cce214396_cgraph.md5  classTournamentRunnerGUI_1_1MainWindow-members.html  classTournamentRunnerGUI_1_1MainWindow.html  classTournamentRunnerGUI_1_1MainWindow__coll__graph.map  (+235 more)
doc/html/search/: all_0.js  all_10.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  functions_0.js  functions_1.js  functions_11.js  functions_14.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+15 more)
doxygen/: Doxyfile.in  development_environment.dox  features.dox  introduction.dox  mainpage.dox
gui/: CMakeLists.txt
gui/include/tournament_runner_gui/: about_dialog.h  add_participant_dialog.h  edit_tournament_dialog.h  finalframe.h  kata_round_participant_model.h  kataround_overview_frame.h  mainframe.h  mainwindow.h  new_tournament_dialog.h  participant_kata_round_WizardPage.h  participant_model.h  participant_ranking_model.h
gui/src/: about_dialog.cpp  add_participant_dialog.cpp  edit_tournament_dialog.cpp  finalframe.cpp  kata_round_participant_model.cpp  kataround_overview_frame.cpp  main.cpp  mainframe.cpp  mainwindow.cpp  new_tournament_dialog.cpp  participant_kata_round_WizardPage.cpp  participant_model.cpp  participant_ranking_model.cpp
gui/tests/feature/: CMakeLists.txt  cucumber.yml
gui/tests/feature/features/: AboutDialog.feature  AddParticipantDialog.feature  DeleteParticipant.feature  EditParticipant.feature  EditTournamentDialog.feature  KataRoundStartPage.feature  NewTournamentDialog.feature  RankedlistPage.feature  SaveAndLoad.feature
gui/tests/feature/features/step_definitions/: forwarding_steps.rb  gui_steps.cpp
gui/tests/unit/: CMakeLists.txt
gui/tests/unit/include/: persistency_mock.h
gui/tests/unit/src/: kata_round_participant_model_test.cpp  kataround_overview_frame_test.cpp  mainwindow_test.cpp  participant_kata_round_WizardPage_test.cpp  participant_model_test.cpp  qttest_main.cpp
gui/ui/: about_dialog.ui  add_participant_dialog.ui  edit_tournament_dialog.ui  finalframe.ui  kataround_overview_frame.ui  mainframe.ui  mainwindow.ui  new_tournament_dialog.ui
include/tournament_runner/: date.h  karateka.h  kata_performer_interface.h  kataround_scores.h  os_helper.h  participant_interface.h  persistency.h  persistency_interface.h  tournament.h
scripts/: gcovr
src/: CMakeLists.txt  date.cpp  karateka.cpp  kataround_scores.cpp  os_helper.cpp  os_helper_win.cpp  persistency.cpp  tournament.cpp
tests/feature/: CMakeLists.txt  cucumber.yml
tests/feature/features/: KataRound.feature  KataRoundStartlist.feature  Persistency.feature  Rankedlist.feature  SetupTournament.feature
tests/feature/features/step_definitions/: feature_test_contexts.h  forwarding_steps.rb  persistency_steps.cpp  tournament_steps.cpp
tests/unit/: CMakeLists.txt
tests/unit/include/: kata_performer_mock.h
tests/unit/src/: date_test.cpp  karateka_test.cpp  kataround_scores_test.cpp  persistency_test.cpp  tournament_test.cpp
